Add AllContactRelatedTables and labels needed for output

--- a/Cis212Project2/Cis212Project2.vbproj
+++ b/Cis212Project2/Cis212Project2.vbproj
@@ -72,6 +72,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AllContactRelatedTables.vb" />
     <Compile Include="CompaniesAndEmployeesTables.vb" />
     <Compile Include="EmployeesTable.vb" />
     <Compile Include="DataBaseFetcher.vb" />
