--- a/Cis212Project2/Cis212Project2.vbproj
+++ b/Cis212Project2/Cis212Project2.vbproj
@@ -72,9 +72,9 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AllContactRelatedTables.vb" />
-    <Compile Include="CompaniesAndEmployeesTables.vb" />
-    <Compile Include="EmployeesTable.vb" />
+    <Compile Include="ScubaTables\AllContactRelatedTables.vb" />
+    <Compile Include="ScubaTables\CompaniesAndEmployeesTables.vb" />
+    <Compile Include="ScubaTables\EmployeesTable.vb" />
     <Compile Include="DataBaseFetcher.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
@@ -120,7 +120,6 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
-    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="bin\Debug\Images\Logo.png" />
